--- a/taskana-adapter/pom.xml
+++ b/taskana-adapter/pom.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-        <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-        <groupId>pro.taskana</groupId>
-        <artifactId>taskana-adapter</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <packaging>jar</packaging>
+    <groupId>pro.taskana</groupId>
+    <artifactId>taskana-adapter</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-        <name>taskana-adapter</name>
-        <description>Taskana Adapter for executing tasks from external systems</description>
+    <name>taskana-adapter</name>
+    <description>Taskana Adapter for executing tasks from external systems</description>
 
     <developers>
         <developer>
@@ -20,92 +21,76 @@
         </developer>
     </developers>
 
-        <parent>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
-                <version>2.0.3.RELEASE</version>
-                <relativePath/>
-        </parent>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.3.RELEASE</version>
+        <relativePath />
+    </parent>
 
-        <properties>
-                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-                <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-                <java.version>1.8</java.version>
-        </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 
-        <dependencies>
+    <dependencies>
 
-              <dependency>
-                  <groupId>org.springframework.boot</groupId>
-                  <artifactId>spring-boot-starter-web</artifactId>
-              </dependency>
-              <dependency>
-                  <groupId>org.springframework.boot</groupId>
-                  <artifactId>spring-boot-starter-jdbc</artifactId>
-              </dependency>
-              <dependency>
-                    <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-configuration-processor</artifactId>
-              </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
 
-              <dependency>
-              <groupId>org.springframework.data</groupId>
-                  <artifactId>spring-data-commons</artifactId>
-                  <version>1.12.2.RELEASE</version>
-              </dependency>
-              <dependency>
-                  <groupId>org.springframework.boot</groupId>
-                  <artifactId>spring-boot-starter-test</artifactId>
-                  <scope>test</scope>
-              </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.1.7.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-              <dependency>
-                  <groupId>junit</groupId>
-                  <artifactId>junit</artifactId>
-                  <scope>test</scope>
-              </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-               <dependency>
-                  <groupId>com.h2database</groupId>
-                  <artifactId>h2</artifactId>
-               </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
 
-              <dependency>
-                   <groupId>pro.taskana</groupId>
-                   <artifactId>taskana-spring</artifactId>
-                   <version>1.0.8-SNAPSHOT</version>
-              </dependency>
+        <dependency>
+            <groupId>pro.taskana</groupId>
+            <artifactId>taskana-spring</artifactId>
+            <version>1.0.8-SNAPSHOT</version>
+        </dependency>
 
-              <dependency>
-                  <groupId>org.mybatis.spring.boot</groupId>
-                  <artifactId>mybatis-spring-boot-starter</artifactId>
-                  <version>1.3.2</version>
-              </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
-        </dependencies>
+    </dependencies>
 
-        <!-- build>
-                <plugins>
-
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-compiler-plugin</artifactId>
-                                <version>3.5.1</version>
-                                <configuration>
-                                        <showWarnings>true</showWarnings>
-                                        <debug>true</debug>
-                                        <compilerArgs>
-                                                <arg>-Xlint:all</arg>
-                                        </compilerArgs>
-                                </configuration>
-                        </plugin>
-                        <plugin>
-                               <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-install-plugin</artifactId>
-                                <version>3.0.0-M1</version>
-                        </plugin>
-                </plugins>
-        </build-->
+    <!-- build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+        <artifactId>maven-compiler-plugin</artifactId> <version>3.5.1</version> <configuration> 
+        <showWarnings>true</showWarnings> <debug>true</debug> <compilerArgs> <arg>-Xlint:all</arg> 
+        </compilerArgs> </configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+        <artifactId>maven-install-plugin</artifactId> <version>3.0.0-M1</version> 
+        </plugin> </plugins> </build -->
 
 
 </project>
