Exploit CallbackState - remove adapter database
remove references to adapterSchema

--- a/taskana-adapter/pom.xml
+++ b/taskana-adapter/pom.xml
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>pro.taskana</groupId>
             <artifactId>taskana-spring</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.5-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -85,11 +85,11 @@
 
     </dependencies>
 
-    <!-- build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-        <artifactId>maven-compiler-plugin</artifactId> <version>3.5.1</version> <configuration> 
-        <showWarnings>true</showWarnings> <debug>true</debug> <compilerArgs> <arg>-Xlint:all</arg> 
-        </compilerArgs> </configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-        <artifactId>maven-install-plugin</artifactId> <version>3.0.0-M1</version> 
+    <!-- build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId> <version>3.5.1</version> <configuration>
+        <showWarnings>true</showWarnings> <debug>true</debug> <compilerArgs> <arg>-Xlint:all</arg>
+        </compilerArgs> </configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-install-plugin</artifactId> <version>3.0.0-M1</version>
         </plugin> </plugins> </build -->
 
 
