TSK-984 exploit Task Router SPI

--- a/taskana-adapter-test/src/main/resources/application.properties
+++ b/taskana-adapter-test/src/main/resources/application.properties
@@ -55,8 +55,7 @@ taskana.datasource.password = sa
 taskana.schemaName=TASKANA
 
 taskana.adapter.mapping.default.domain=DOMAIN_A
-taskana.adapter.mapping.default.workbasket.key=DEFAULT_WORKBASKET
-taskana.adapter.mapping.default.classification.key=DEFAULT_CLASSIFICATION
+taskana.adapter.mapping.default.classification.key=L1050
 taskana.adapter.mapping.default.classification.type=TASK
 taskana.adapter.mapping.default.objectreference.company=DEFAULT_COMPANY
 taskana.adapter.mapping.default.objectreference.system=DEFAULT_SYSTEM
