--- a/taskana-adapter-camunda-outbox-rest/src/main/resources/datasource.properties
+++ b/taskana-adapter-camunda-outbox-rest/src/main/resources/datasource.properties
@@ -1,4 +1,5 @@
 taskana.adapter.outbox.rest.datasource.jndi=java:jboss/datasources/ProcessEnginePostgres
+#taskana.adapter.outbox.rest.datasource.jndi=jdbc/ProcessEngine
 
 #taskana.adapter.outbox.rest.datasource.driver=org.postgresql.Driver
 #taskana.adapter.outbox.rest.datasource.url=jdbc:postgresql://localhost:5432/postgres
