--- a/taskana-adapter-sample/src/main/resources/application.properties
+++ b/taskana-adapter-sample/src/main/resources/application.properties
@@ -49,8 +49,7 @@ taskana.datasource.password=postgres
 taskana.schemaName=TASKANA
 
 taskana.adapter.mapping.default.domain=DOMAIN_A
-taskana.adapter.mapping.default.workbasket.key=DEFAULT_WORKBASKET
-taskana.adapter.mapping.default.classification.key=DEFAULT_CLASSIFICATION
+taskana.adapter.mapping.default.classification.key=L1050
 taskana.adapter.mapping.default.classification.type=TASK
 taskana.adapter.mapping.default.objectreference.company=DEFAULT_COMPANY
 taskana.adapter.mapping.default.objectreference.system=DEFAULT_SYSTEM
