--- a/taskana-adapter-test/src/main/resources/taskana.properties
+++ b/taskana-adapter-test/src/main/resources/taskana.properties
@@ -2,7 +2,7 @@ taskana.roles.user = group1 | group2|teamlead_1 |teamlead_2 |user_1_1| user_1_1|
 taskana.roles.Admin=name=konrad,Organisation=novatec|admin
 taskana.roles.businessadmin=max|Moritz|businessadmin
 taskana.roles.monitor=john|teamlead_2 | monitor
-taskana.domains=DOMAIN_A,DOMAIN_B,DOMAIN_C,DEFAULT_DOMAIN
+taskana.domains=DOMAIN_A,DOMAIN_B,DOMAIN_C
 taskana.classification.types=TASK,DOCUMENT
 taskana.classification.categories.task= EXTERNAL, manual, autoMAtic, Process
 taskana.classification.categories.document= EXTERNAL
